syntax = "proto3";
package vjdmhd.lottery.bet;

import "gogoproto/gogo.proto";

option go_package = "github.com/vjdmhd/lottery/x/bet/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateBet(MsgCreateBet) returns (MsgCreateBetResponse);
}

message MsgCreateBet {
  string creator = 1;
  string amount = 3 [
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false];
}
message MsgCreateBetResponse {}
